# tuiview-plugins

./: MANIFEST.in  README.md  pyproject.toml  setup.py  tuiview_pluginmgr.py
.github/workflows/: python-app.yml
collect_shapefile/: collect_shapefile.py
gps_marker/: gps_marker.py
location_broadcast/: location_broadcast.py
recode/: recode.py
timeseries/: timeseries_plot.py
tuiview_plugins/: __init__.py  pluginmgr.py
tuiview_plugins/collect_shapefile/: collect_shapefile.py
tuiview_plugins/gps_marker/: gps_marker.py
tuiview_plugins/location_broadcast/: location_broadcast.py
tuiview_plugins/qml_reader/: qml_reader.py
tuiview_plugins/recode/: recode.py
tuiview_plugins/recode/cmdline/: newfile_from_recode.py
tuiview_plugins/scalebar_nth_arrow/: scalebar_north_arrow.py
tuiview_plugins/timeseries/: timeseries_plot.py
